Update manifest to allow module imports

--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,11 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["block-page/*"],
+      "resources": [
+        "core/*.js",
+        "dashboard/*",
+        "block-page/*"
+      ],
       "matches": ["<all_urls>"]
     }
   ]
