--- a/manifest.json
+++ b/manifest.json
@@ -1,51 +1,42 @@
 {
   "manifest_version": 3,
-  "name": "ProTrackr",
+  "name": "Productivity Tool",
   "version": "1.0.0",
-  "description": "A powerful productivity tracking and website blocking tool",
+  "description": "Track and improve your productivity with smart website monitoring",
   "permissions": [
     "storage",
     "tabs",
     "activeTab",
+    "webNavigation",
     "alarms"
   ],
-  "optional_permissions": [
-    "webNavigation"
-  ],
   "background": {
-    "service_worker": "background/service-worker.js",
+    "service_worker": "background/background.js",
     "type": "module"
   },
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
-      "16": "images/icon16.png",
-      "32": "images/icon32.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
   },
   "icons": {
-    "16": "images/icon16.png",
-    "32": "images/icon32.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content/activity-monitor.js"],
-      "run_at": "document_idle"
-    }
-  ],
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "core/*.js",
-        "dashboard/*",
-        "block-page/*"
-      ],
-      "matches": ["<all_urls>"]
-    }
-  ]
+  "web_accessible_resources": [{
+    "resources": [
+      "views/*",
+      "core/*.js",
+      "dashboard/*"
+    ],
+    "matches": ["<all_urls>"]
+  }],
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content/content.js"]
+  }]
 }
